--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -6,15 +6,16 @@
 .dashboard {
 	display: flex;
 	flex-direction: row;
-	gap: 20px;
+	gap: 30px;
 	padding-right: 20px;
+	background-color: rgba(0, 0, 0, .02);
 }
 .content .head {
 	color: #00aa70;
 	margin-bottom: 20px;
 }
 .menu {
-	position: relative;
+	position: fixed;
 	background-color: rgba(0, 0, 0, .5);
 	color: white;
 	width: 20%;
@@ -30,6 +31,7 @@
 	width: 80%;
 	height: 100vh;
 	gap: 20px;
+	overflow-y: scroll;
 }
 
 .profile {
@@ -91,13 +93,12 @@
 	border-radius: 3px;
 }
 .content {
-	width: 90%;
-	margin: 10px auto;
+	width: 100%;
+	margin: auto;
 }
 .content .details {
-	margin-top: 10vh auto;
-	padding: 30px;
-	box-shadow: 4px 5px 20px rgba(0, 0, 0, 0.13);
+	padding: 50px;
+	background-color: rgba(255,255,255,1.0);
 }
 
 
